--- a/samples/sample.css
+++ b/samples/sample.css
@@ -1,3 +1,15 @@
+h1 {
+    color: blue;
+    font-family: arial, helvetica, "sans serif";
+    font-size: 150%;
+}
+
+#nav {
+    color: blue;
+    font-family: arial, helvetica, "sans serif";
+    font-size: 150%;
+}
+
 .fullscreen {
     text-align: center;
     padding: 0;
@@ -26,7 +38,7 @@
     height: inherit; /* ignore but needed for cells to fill height */
 }
 
-.sideline {
+.sideline[test="test"] {
     background-color: lightgray;
     z-index: -1;
     top: 0;
